# spyglass

./: .gitignore  Cargo.toml  index.html
assets/: sw.js
crates/mcap_polars/: Cargo.toml
crates/mcap_polars/src/: lib.rs
crates/slang/: Cargo.toml
crates/slang/src/: lib.rs  parser.rs  slang.pest  to_polars.rs
crates/spyplot/: Cargo.toml
crates/spyplot/examples/: demo.rs
crates/spyplot/src/: bounds.rs  grid_shader.wgsl  lib.rs  lines.rs  spyplot_shader.wgsl
src/: app.rs  file_io.rs  lib.rs  main.rs  xy_plot.rs
