[package]
name = "mcap_polars"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { version = "^0.44.2", features = [
    "lazy",
    "parquet",
    "serde",
    "ipc",
    "json",
    "dtype-struct",
    "polars-ops",
    "list_to_struct",
    "list_arithmetic",
    "trigonometry",
    "ewma",
] }
polars-lazy = "^0.44.2"
polars-core = "^0.44.2"
anyhow = "^1.0.93"
mcap = "^0.16.0"
memmap2 = "^0.9.5"
camino = "^1.1.9"
